hosts/nandstorm/k8s/apps/bitmagnet/bitmagnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitmagnet
  namespace: bitmagnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitmagnet
  template:
    metadata:
      labels:
        app: bitmagnet
    spec:
      containers:
      - name: bitmagnet
        image: ghcr.io/bitmagnet-io/bitmagnet:v0.10.0
        args: [
          "worker", "run",
          "--keys=http_server",
          "--keys=queue_server",
          "--keys=dht_crawler"
        ]
        ports:
        - name: http
          containerPort: 3333
          protocol: TCP
        - name: bt-tcp
          containerPort: 3334
          protocol: TCP
        - name: bt-udp
          containerPort: 3334
          protocol: UDP
        volumeMounts:
          - name: config
            mountPath: /root/.config/bitmagnet
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: bitmagnet-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: bitmagnet
  namespace: bitmagnet
spec:
  selector:
    app: bitmagnet
  ports:
  - name: http
    port: 3333
    targetPort: 3333
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitmagnet
  namespace: bitmagnet
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - bitmagnet.thejeffer.net
    secretName: bitmagnet-tls
  rules:
  - host: bitmagnet.thejeffer.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bitmagnet
            port:
              number: 3333
---
apiVersion: v1
kind: Service
metadata:
  name: bitmagnet-dht
  namespace: bitmagnet
  annotations:
    metallb.universe.tf/allow-shared-ip: bitmagnet
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: bitmagnet
  ports:
  - name: bt-tcp
    port: 3334
    targetPort: 3334
    protocol: TCP
  - name: bt-udp
    port: 3334
    targetPort: 3334
    protocol: UDP
